--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"cypress": "^3.4.0",
+		"react-test-renderer": "^16.8.6"
 	}
 }
