--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
+    "react-responsive-carousel": "^3.1.49",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.1",
@@ -17,7 +18,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.3.2",
-    "uploadcare-widget": "^3.7.7"
+    "uploadcare-widget": "^3.7.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,20 +42,20 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^3.4.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "^6.1.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
-    "eslint-config-prettier": "^6.0.0",
+    "eslint-config-prettier": "^4.3.0",
     "eslint-config-wesbos": "0.0.19",
-    "eslint-plugin-html": "^6.0.0",
+    "eslint-plugin-html": "^5.0.5",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.6.1",
     "prettier": "^1.18.2",
-    "cypress": "^3.4.1",
     "react-test-renderer": "^16.8.6"
   }
 }
