--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
 	"private": true,
 	"dependencies": {
 		"@auth0/auth0-spa-js": "^1.1.1",
+		"@fortawesome/fontawesome-svg-core": "^1.2.20",
+		"@fortawesome/free-brands-svg-icons": "^5.10.0",
+		"@fortawesome/free-regular-svg-icons": "^5.10.0",
+		"@fortawesome/free-solid-svg-icons": "^5.10.0",
+		"@fortawesome/react-fontawesome": "^0.1.4",
 		"auth0-js": "^9.11.2",
 		"axios": "^0.19.0",
 		"bootstrap": "^4.3.1",
