--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "auth0-js": "^9.11.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "formik": "^1.5.8",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -24,7 +25,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.3.2",
-    "uploadcare-widget": "^3.7.6"
+    "uploadcare-widget": "^3.7.6",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
