--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-dropzone": "^10.1.7",
     "react-redux": "^7.1.0",
     "react-responsive-carousel": "^3.1.49",
     "react-router-dom": "^5.0.1",
