--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "@fortawesome/free-regular-svg-icons": "^5.10.0",
     "@fortawesome/free-solid-svg-icons": "^5.10.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@uppy/react": "^1.2.0",
     "auth0-js": "^9.11.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "formik": "^1.5.8",
+    "html5-file-selector": "^2.1.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.7",
+    "react-dropzone-uploader": "^2.10.1",
     "react-redux": "^7.1.0",
     "react-responsive-carousel": "^3.1.49",
     "react-router-dom": "^5.0.1",
