--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-base = "frontend/"
-publish = "frontend/build/"
-command = "npm build"
+base = "/"
+publish = "build/"
+command = "npm run build"
 
 [[redirects]]
   from = "/*"
