--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^1.5.8",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.7",
     "react-redux": "^7.1.0",
