--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.7",
+    "react-dropzone-uploader": "^2.10.1",
     "react-redux": "^7.1.0",
     "react-responsive-carousel": "^3.1.49",
     "react-router-dom": "^5.0.1",
